--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,7 +9,7 @@
     <%= link_to "Time Entries", posts_path %>
   </li>
   <li class="disabled">
-    <a href="#">Messages</a>
+    <%= link_to "New Entry", new_post_path %>
   </li>
   <li class="dropdown pull-right">
      <a href="#" data-toggle="dropdown" class="dropdown-toggle">Account<strong class="caret"></strong></a>
