--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,5 +20,7 @@
         </div>
       </div>
     </div>
+
+    <%= js add_gritter(flash[:notice], title: "Notification", sticky: false) %>
   </body>
 </html>
