--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,18 +12,9 @@
     <%= f.text_area :rationale, class: "form-control" %>
   </div>
 
-  <div class="form-group">
-    
-    <%= f.radio_button :status, 'submitted' %>
-    <%= f.label :status, 'Submited' %>
-
-    <%= f.radio_button :status, 'approved' %>
-    <%= f.label :status, 'Approved' %>
-    
-    <%= f.radio_button :status, 'rejected' %>
-    <%= f.label :status, 'Rejected' %>
-  
-  </div>
+  <% if current_user.type == "AdminUser" %>
+    <%= render partial: 'status', locals: { f: f } %>
+  <% end %>
 
   <div class="form-group">
     <%= f.submit 'Save', class: 'btn btn-primary btn-block' %>
