--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,24 +1,31 @@
 <div class='logo'>
 <h1>Time Tracker</h1>
 </div>
-<ul class="nav nav-tabs custom-nav">
-  <li class="<%= active?(root_path) %>">
-    <%= link_to "Home", root_path %>
-  </li>
-  <li class="<%= active?(posts_path) %>">
-    <%= link_to "Time Entries", posts_path %>
-  </li>
-  <li class="disabled">
-    <%= link_to "New Entry", new_post_path %>
-  </li>
-  <li class="dropdown pull-right">
-     <a href="#" data-toggle="dropdown" class="dropdown-toggle">Account<strong class="caret"></strong></a>
-    <ul class="dropdown-menu">
-      <li class="divider">
-      </li>
-      <li>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-      </li>
-    </ul>
-  </li>
-</ul>
+<% if user_signed_in? %>
+  <ul class="nav nav-tabs custom-nav">
+    <li class="<%= active?(root_path) %>">
+      <%= link_to "Home", root_path %>
+    </li>
+    <li class="<%= active?(posts_path) %>">
+      <%= link_to "Time Entries", posts_path %>
+    </li>
+    <li class="disabled">
+      <%= link_to "New Entry", new_post_path %>
+    </li>
+    <li class="dropdown pull-right">
+       <a href="#" data-toggle="dropdown" class="dropdown-toggle">Account<strong class="caret"></strong></a>
+      <ul class="dropdown-menu">
+        <% if current_user.try(:type) == 'AdminUser' %>
+          <li>
+            <%= link_to "Admin Dashboard", admin_root_path %>
+          </li>
+        <% end %>
+        <li class="divider">
+        </li>
+        <li>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+        </li>
+      </ul>
+    </li>
+  </ul>
+<% end %>
