refactoring policy and adding view helper

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,10 @@
         User
       </th>
       <th>
-      Rationale
+        Rationale
+      </th>
+      <th>
+        Status
       </th>
       <th></th>
       <th></th>
