--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -11,6 +11,9 @@
   <td>
     <%= truncate(post.rationale) %>
   </td>
+  <td>
+    <%= status_label(post.status) %>
+  </td>
   <td id='<%= "edit_post_#{post.id}" %>'>
     <%= link_to 'Edit', edit_post_path(post) %>
   </td>
