--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,6 +12,11 @@
     <%= f.text_area :rationale, class: "form-control" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :overtime_request, class: "col-sm-2 control-label" %> 
+    <%= f.text_field :overtime_request, class: "form-control" %>
+  </div>
+
   <% if current_user.type == "AdminUser" %>
     <%= render partial: 'status', locals: { f: f } %>
   <% end %>
