--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,6 +3,9 @@
     <%= post.id %>
   </td>
   <td>
+    <%= post.overtime_request %>
+  </td>
+  <td>
     <%= post.date %>
   </td>
   <td>
@@ -15,7 +18,7 @@
     <%= status_label(post.status) %>
   </td>
   <td id='<%= "edit_post_#{post.id}" %>'>
-    <%= link_to 'Edit', edit_post_path(post) %>
+    <%= link_to 'Edit', edit_post_path(post) if policy(post).update?  %>
   </td>
   <td id='<%= "delete_post_#{post.id}" %>'>
     <%= link_to 'Delete', post_path(post), method: :delete %>
