--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -18,9 +18,15 @@
     <%= status_label(post.status) %>
   </td>
   <td id='<%= "edit_post_#{post.id}" %>'>
-    <%= link_to 'Edit', edit_post_path(post) if policy(post).update?  %>
+    <% if policy(post).update? %>
+      <%= link_to edit_post_path(post) do  %>
+        <span class="fa fa-pencil index-icon"></span>
+      <% end %>
+    <% end %>
   </td>
   <td id='<%= "delete_post_#{post.id}" %>'>
-    <%= link_to 'Delete', post_path(post), method: :delete %>
+    <%= link_to post_path(post), method: :delete do %>
+      <span class="fa fa-trash index-icon"></span>
+    <% end %>
   </td>
 </tr>
