--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,29 @@
-<p><%= @post.date %> <%= @post.rationale %> <%= @post.user.first_name %></p>
+<div>
+  <h2><%= @post.rationale %></h2>
+</div>
+
+<div class="well">
+  <div>
+    <h4><span>Overtime Requested</span></h4>
+    <%= @post.overtime_request %>
+  </div>
+
+  <div>
+    <h4><span>Employee</span></h4>
+    <%= @post.user_full_name %>
+  </div>
+
+  <div>
+    <h4><span>Date</span></h4>
+    <%= @post.date %>
+  </div>
+
+  <div>
+    <h4><span>Current Stage</span></h4>
+    <%= @post.status %>
+  </div>
+</div>
+
+<% if policy(@post).update? %>
+  <%= link_to 'Edit Post', edit_post_path(@post), class: "btn btn-primary" %>
+<% end %>
