audit logs index

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -9,7 +9,7 @@
     <%= post.date %>
   </td>
   <td>
-    <%= post.user.full_name %>
+    <%= post.user_full_name %>
   </td>
   <td>
     <%= truncate(post.rationale) %>
