--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,6 +9,11 @@
     <li class="<%= active?(posts_path) %>">
       <%= link_to "Time Entries", posts_path %>
     </li>
+    <% if policy(AuditLog).index? %>
+      <li class="<%= active?(posts_path) %>">
+        <%= link_to "Audit Log", audit_logs_path %>
+      </li>
+    <% end %>
     <li class="disabled">
       <%= link_to "New Entry", new_post_path %>
     </li>
