--- a/app/assets/stylesheets/admin_homepage.scss
+++ b/app/assets/stylesheets/admin_homepage.scss
@@ -1,15 +1,26 @@
-.pending-hompeage {
+.pending-homepage {
   margin: 20px 0 20px 0;
   background-color: #E3E3E3;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
   padding: 20px;
+  margin: 0px;
 }
 
 .homepage-block {
   background-color: #1D3C91;
   color: white;
-  margin: 15px;
+  margin: 15px 40px 15px 40px;
   padding: 15px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  &:hover {
+    background-color: #172b63; 
+  }
+}
+
+.pending-details {
+  font-weight: 900;
 }
