--- a/app/views/static/homepage.html.erb
+++ b/app/views/static/homepage.html.erb
@@ -1,4 +1,4 @@
-<% if admin_types.include?(current_user.type) %>
+<% if current_user && admin_types.include?(current_user.type) %>
   <%= render 'admin' %>
 <% else %>
   <%= render 'employee' %>
