--- a/app/views/static/_employee.html.erb
+++ b/app/views/static/_employee.html.erb
@@ -1,10 +1,13 @@
 <div class='container-fluid'>
   <div class="row">
-    <div class="col-md-5 column jumbotron employee-blocks">
-    asdf
+    <div class="col-md-12 jumbotron employee-blocks">
+      <h3>Pending Your Confirmation</h3>
+      <%= render partial: "pending_audit_confirmation", locals: { pending_audit_confirmations: @pending_audit_confirmations } %>
     </div>
-    <div class="col-md-5 column jumbotron employee-blocks">
-    asdf
+  </div>
+  <div class="row">
+    <div class="col-md-12 column jumbotron employee-blocks">
+     asdf
     </div>
   </div>
 </div>
