--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -7,7 +7,7 @@
       <%= link_to "Home", root_path %>
     </li>
     <li class="<%= active?(posts_path) %>">
-      <%= link_to "Time Entries", posts_path %>
+      <%= link_to "Entries", posts_path %>
     </li>
     <% if policy(AuditLog).index? %>
       <li class="<%= active?(posts_path) %>">
